# azbuse

./: .gitignore  Cargo.toml  Makefile  README.md  dd-perf.sh  dd-read.sh  test.sh
.github/workflows/: CI.yml
abuse/: Cargo.toml  build.rs
abuse-kmod/: Makefile
abuse-kmod/src/: .gitignore  Makefile  abuse.c  abuse.h  dkms.conf
abuse-proto/: Cargo.toml
abuse-proto/src/: main.rs
abuse-ramdisk/: Cargo.toml  README.md
abuse-ramdisk/src/: main.rs
abuse/src/: lib.rs
abusectl/: Cargo.toml
abusectl/src/: main.rs
azbuse/: Cargo.toml
azbuse-kmod/: Makefile
azbuse-kmod/src/: .gitignore  Makefile  abuse.h  azbuse.c  azbuse.h  dkms.conf
azbuse/src/: lib.rs
azbusebctl/src/: main.rs
azbusectl/: Cargo.toml
azbusectl/src/: main.rs
blk-sys/: Cargo.toml  build.rs
blk-sys/bootstrap/: .gitignore  Cargo.toml  Kbuild  Makefile
blk-sys/src/: bindings_helper.h  lib.rs
nbd/: Cargo.toml
nbd-ramdisk/: Cargo.toml  README.md
nbd-ramdisk/src/: main.rs
nbd/src/: lib.rs
nbd/src/transport/: mod.rs
nbd/src/transport/protocol/: handshake.rs
ramdisk/: Cargo.toml
ramdisk/src/: main.rs
tests/: perf.rb
tests/abuse-ramdisk/: Cargo.toml
tests/ramdisk/: Cargo.toml
tests/ramdisk/src/: main.rs
userland-io/: Cargo.toml
userland-io/src/: lib.rs
userland-io/src/transport/: mod.rs
userland-io/src/transport/nbd/: mod.rs
userland-io/src/transport/nbd/protocol/: io.rs  mod.rs  transmission.rs
