[package]
name = "abuse"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }
tokio = { version = "1.0", features = ["net", "sync", "io-util", "rt"] }
async-trait = "0.1"
nix = { workspace = true, features = ["ioctl"] }
mio = { workspace = true, features = ["os-poll", "os-ext"] }