[package]
name = "nbd-ramdisk"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbd = { path = "../nbd" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"]}
futures = "0.3"