[package]
name = "nbd"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["net", "sync", "io-util", "rt"] }
tokio-stream = "0.1"
async-trait = "0.1"
byteorder = "1.3"
futures = "0.3"