[package]
name = "abuse-ramdisk"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
nix = "0.19"
mio = { version = "0.7", features = ["os-poll", "os-ext"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
bitflags = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
libc = "0.2"

abuse = { path = "../abuse" }