[package]
name = "ramdisk"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
nix = { workspace = true }
mio = { workspace = true, features = ["os-poll", "os-ext"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
bitflags = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
libc = "0.2"

azbuse = { path = "../../azbuse" }